[package]
name = "fictional-octo-fiesta"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_derive = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde-xml-rs = "0.4"
serde_json = "1.0"
libxml = "0.2"
epoll = "4.3"
mio = { version = "0.7", features = ["os-poll", "os-ext", "net"] }
log = "0.4"
env_logger = "0.8"
cidr-utils = "0.5"
hyper = { version = "0.14", features = ["full"] }
tokio = { version = "1", features = ["full"] }
# rocket = "0.4"